Fixing formatting on mobile

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ font-family: 'Satisfy', cursive;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    border: 1px solid black;
 }
 
 body {
@@ -170,9 +171,13 @@ section p {
         margin: 0 auto;
     }
 
-    body {
+    .body {
         width: 100%;
         margin-right: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        align-self: center;
     }
 }
 
